# DRAWDOC

./: .env.example  .gitignore  Makefile  README.md  drawdoc-spec (2).md  seed.py
agent/: main.py  pyproject.toml
agent/app/: config.py  graph.py  main.py  router.py
api/: main.py  migrate.py  pyproject.toml
api/alembic/: alembic.ini  env.py
api/alembic/versions/: 0001_initial.py
api/app/: main.py  models.py
api/app/assets/: router.py
api/app/auth/: jwt.py  router.py
api/app/demo/: router.py
api/app/documents/: router.py
api/app/shared/: config.py  database.py  errors.py
api/app/users/: router.py
api/app/workspaces/: router.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: AIPanel.tsx  AvatarStack.tsx  BlockNoteEditor.tsx  BlockNoteUIProvider.tsx  DashboardSidebar.tsx  DemoEditor.tsx  Editor.tsx  ErrorBoundary.tsx  ExcalidrawCanvas.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  PricingSection.tsx  ProtectedRoute.tsx  Testimonials.tsx  ThemeToggle.tsx
frontend/src/hooks/: use-chat.ts  use-keyboard-shortcuts.ts  use-yjs.ts
frontend/src/lib/: api-client.ts  auth-store.ts  guest-identity.ts  theme-store.ts  view-mode-store.ts
frontend/src/pages/: Dashboard.tsx  DocumentPage.tsx  Landing.tsx  Login.tsx  SignUp.tsx
frontend/src/styles/: index.css
infra/: Dockerfile.agent  Dockerfile.api  Dockerfile.frontend  Dockerfile.ws  docker-compose.yml  nginx.conf  render.yaml
ws/: main.py  pyproject.toml
ws/app/: main.py
