[project]
name = "drawdoc-agent"
version = "0.1.0"
description = "DrawDoc LangGraph AI agent server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "langchain-groq>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis[hiredis]>=5.2.0",
    "psycopg-pool>=3.2.0",
    "arq>=0.26.0",
    "pycrdt>=0.12.0",
    "psycopg[binary]>=3.2.0,<3.3",
    "jsonriver>=0.1.0",
    "httpx>=0.28.0",
]

[project.scripts]
drawdoc-agent = "app.main:app"
