[project]
name = "drawdoc-api"
version = "0.1.0"
description = "DrawDoc FastAPI backend — auth, workspaces, documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.19",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "bcrypt>=4.0.0",
]

[project.scripts]
drawdoc-api = "app.main:app"
